# aya

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0-beta.md  RELEASE_NOTES_v0.5.0.md  index.html  integrations.md  package-lock.json  package.json  playwright.config.ts  search.md  tsconfig.json  tsconfig.test-src.json  vite.config.ts
.claude/: settings.json
docs/: e2e.md  index.html  release-checklist.md  remote-sessions-darwine-spike.md  remote-sessions.md  signing-macos.md  standout-features-report.md  usage-chip-variants.html  usage-chip.md
e2e/: appearance.spec.ts  config-hot-reload.spec.ts  fixtures.ts  focus-scenarios.spec.ts  focus-tab.spec.ts  focus.spec.ts  new-project.spec.ts  path-repair.spec.ts  project-config-watch.spec.ts  restart-active-terminal.spec.ts  search.spec.ts  settings-microphone.spec.ts  settings-path-suggestions.spec.ts  sidebar-close-terminal.spec.ts  smoke.spec.ts  snippet-exited-terminal.spec.ts  snippets.spec.ts  status-clear.spec.ts  terminal-polish.spec.ts  terminal-vt.spec.ts  usage.spec.ts
electron/: atomic-write.ts  cli-path.ts  cli-shim.ts  config-echo.ts  config-watcher-pure.ts  config-watcher.ts  config.ts  control-protocol.ts  control.ts  git.ts  github.ts  harness-account.ts  harnesses.ts  local-summary-errors.ts  main.ts  navigation.ts  paths.ts  preload.ts  presets.ts  project-local.ts  pty-host.ts  (+20 more)
tui-prototype/: pyproject.toml
tui-prototype/aya/: __init__.py  app.py  cli.py  config.py  screens.py  sidebar.py  terminal.py
tui-prototype/tests/: test_boot.py  test_launch_safety.py
(+112 files in other folders)
