[project]
name = "aya"
version = "0.1.0"
description = "A terminal IDE that organizes Claude Code, Codex, and shell sessions across projects."
requires-python = ">=3.12"
dependencies = [
    "pyte>=0.8.2",
    "textual>=8.2.7",
]

[project.scripts]
aya = "aya.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aya"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
